improve types: - allow type to instantiate Hono instance for Bindings - View and Layout functions to take context as an argument, not just a property

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@htmxjs/htmxjs",
-  "version": "1.0.0",
+  "name": "htmxjs",
+  "version": "1.0.1",
   "description": "htmxjs is the server-side js framework for HTMX",
   "main": "htmxjs.ts",
   "keywords": [
